--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -44,6 +44,10 @@ msgctxt "#32006"
 msgid "Local IP address (optional):"
 msgstr ""
 
+msgctxt "#32007"
+msgid "Track downloads?"
+msgstr ""
+
 msgctxt "#32010"
 msgid "Remote Kodi 1"
 msgstr ""
